add skeleton of the app

--- a/src/app/components/todo-list/TodoList.module.scss
+++ b/src/app/components/todo-list/TodoList.module.scss
@@ -1,9 +1,4 @@
-.TodoList {
-  border: 1px solid #ccc;
-  padding: 16px;
-  border-radius: 4px;
-}
-
 .TodoItem {
-  text-transform: lowercase;
+  padding: 16px;
+  border-bottom: 1px solid #ccc;
 }
