--- a/src/app/components/button/Button.module.scss
+++ b/src/app/components/button/Button.module.scss
@@ -1,7 +1,7 @@
 .Button {
   position: relative;
-  width: 44px;
-  height: 44px;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
   border: 1px solid #50b7e8;
   background-color: #50b7e8;
@@ -10,6 +10,21 @@
 
   &::before,
   &::after {
+    content: '';
     position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    width: 50%;
+    height: 1px;
+    background-color: #fff;
+  }
+
+  &::before {
+    transform: translate3d(-50%, -50%, 0) rotate(90deg);
+  }
+
+  &::after {
+    transform: translate3d(-50%, -50%, 0);
   }
 }
